# vibes

./: .env.automation.example  .gitignore  .last-build-images  .last-build-tag  .last-worker-tag  DEBUGGING.md  Makefile  SETUP.md  backlog.md  package-lock.json  package.json  todo.txt
Features/: auth-error-messaging-and-coming-soon.md  database-management-ui-plan.md  task-processing-status-and-toast-routing.md  web-component-ui-stability-base-element-plan.md
cluster-bootstrap/: check-cluster.sh  init-database.sh  sync-secrets.mjs
deploy/: apply-platform.sh  build-push.sh  destroy-platform.sh  sync-base-dns.sh
desktop/: README.md
desktop/scripts/: build-dmg.sh  build-release.sh  build-web.js  macos-notarize.sh  windows-sign.ps1
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: DEPLOYMENTS.md  EXISTING_APP_ONBOARDING.md  GO_LIVE_CHECKLIST.md  PRICING_LIMITS_POLICY.md  RDS_BACKUP_RUNBOOK.md  SUPPORT_WORKFLOWS.md  agent-cli-implementation-plan.md  infra-discovery.md  infra-inventory.json  infra-layered-plan.md  test-cluster-destroy.md  test-cluster-runbook.md
infra/dev/: delete.sh  deploy.sh  empty-db.sh  nginx.conf  podman-compose.yml
infra/eksctl/: cluster-two-nodegroups.yaml
infra/k8s/: README.md  app-template.yaml  apply-cert-resources.sh  cert-manager-helm.sh  cert-manager.yaml  delete.sh  (+27 more)
scripts/: bootstrap.sh  kustomize-worker-from-env.sh  logs.sh  status-check.sh  stop.sh
server/: Dockerfile  package.json
validation/: run-replica-flow.mjs
web/: Dockerfile  package.json
worker/: Dockerfile  package.json
(+129 files in other folders)
