[package]
name = "vibes-desktop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
dirs-next = "2"
flate2 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
get_if_addrs = "0.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
